library/foundation/include/virgil/crypto/foundation/vscf_hybrid_key_alg.h

//
//  Handles implementation details.
//
typedef struct vscf_hybrid_key_alg_t vscf_hybrid_key_alg_t;
//
//  Cast to the 'vscf_impl_t' type.
//
VSCF_PUBLIC vscf_impl_t *
vscf_hybrid_key_alg_impl(vscf_hybrid_key_alg_t *self);
//
//  Copy given implementation context by increasing reference counter.
//
VSCF_PUBLIC vscf_hybrid_key_alg_t *
vscf_hybrid_key_alg_shallow_copy(vscf_hybrid_key_alg_t *self);
//
//  Setup predefined values to the uninitialized class dependencies.
//
VSCF_PUBLIC vscf_status_t
vscf_hybrid_key_alg_setup_defaults(vscf_hybrid_key_alg_t *self) VSCF_NODISCARD;
//
//  Make hybrid private key from given keys.
//
VSCF_PUBLIC vscf_impl_t *
vscf_hybrid_key_alg_make_key(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *first_key,
        const vscf_impl_t *second_key, vscf_error_t *error);
//
//  Check if algorithm can encrypt data with a given key.
//
VSCF_PUBLIC bool
vscf_hybrid_key_alg_can_encrypt(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *public_key, size_t data_len);
//
//  Calculate required buffer length to hold the encrypted data.
//
VSCF_PUBLIC size_t
vscf_hybrid_key_alg_encrypted_len(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *public_key, size_t data_len);
//
//  Encrypt data with a given public key.
//
VSCF_PUBLIC vscf_status_t
vscf_hybrid_key_alg_encrypt(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *public_key, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can decrypt data with a given key.
//  However, success result of decryption is not guaranteed.
//
VSCF_PUBLIC bool
vscf_hybrid_key_alg_can_decrypt(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key, size_t data_len);
//
//  Calculate required buffer length to hold the decrypted data.
//
VSCF_PUBLIC size_t
vscf_hybrid_key_alg_decrypted_len(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key, size_t data_len);
//
//  Decrypt given data.
//
VSCF_PUBLIC vscf_status_t
vscf_hybrid_key_alg_decrypt(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can sign data digest with a given key.
//
VSCF_PUBLIC bool
vscf_hybrid_key_alg_can_sign(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key);
//
//  Return length in bytes required to hold signature.
//  Return zero if a given private key can not produce signatures.
//
VSCF_PUBLIC size_t
vscf_hybrid_key_alg_signature_len(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key);
//
//  Sign data digest with a given private key.
//
VSCF_PUBLIC vscf_status_t
vscf_hybrid_key_alg_sign_hash(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *private_key, vscf_alg_id_t hash_id,
        vsc_data_t digest, vsc_buffer_t *signature) VSCF_NODISCARD;
//
//  Check if algorithm can verify data digest with a given key.
//
VSCF_PUBLIC bool
vscf_hybrid_key_alg_can_verify(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *public_key);
//
//  Verify data digest with a given public key and signature.
//
VSCF_PUBLIC bool
vscf_hybrid_key_alg_verify_hash(const vscf_hybrid_key_alg_t *self, const vscf_impl_t *public_key, vscf_alg_id_t hash_id,
        vsc_data_t digest, vsc_data_t signature);